--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="meme-generator">
       <button class="generate-meme-btn">Generate Meme</button>
       <h2 class="meme-title">Loading...</h2>
-      <img src="https://coolbackgrounds.io/images/backgrounds/index/compute-ea4c57a4.png" alt="" />
+      <img src="" alt="" />
 
       <div class="meme-author"></div>
     </div>
